--- a/UberNewDriver/GoogleService-Info.plist
+++ b/UberNewDriver/GoogleService-Info.plist
@@ -7,34 +7,34 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>90709508028-53ofr29dmki7qj9geibm1sc5ch2pdkcr.apps.googleusercontent.com</string>
+	<string>343906907529-bs2d6kd65lv04plnrldhiop643bhpf34.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.90709508028-53ofr29dmki7qj9geibm1sc5ch2pdkcr</string>
+	<string>com.googleusercontent.apps.343906907529-bs2d6kd65lv04plnrldhiop643bhpf34</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCm5KPAkfY861LBkm5SIAFyUg4ZXuPNX-0</string>
+	<string>AIzaSyAmhdoLXRCSo_F-wKtl1YcpXQyeS2Dyj3o</string>
 	<key>GCM_SENDER_ID</key>
-	<string>90709508028</string>
+	<string>343906907529</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.rakoobdemo.driver</string>
+	<string>com.blazeride.driver</string>
 	<key>PROJECT_ID</key>
-	<string>rakoobdemo-customer</string>
+	<string>blaze-93701</string>
 	<key>STORAGE_BUCKET</key>
-	<string>rakoobdemo-customer.appspot.com</string>
+	<string>blaze-93701.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:90709508028:ios:2cc96426108c88ef</string>
+	<string>1:343906907529:ios:7bd29d2a415f0c75</string>
 	<key>DATABASE_URL</key>
-	<string>https://rakoobdemo-customer.firebaseio.com</string>
+	<string>https://blaze-93701.firebaseio.com</string>
 </dict>
 </plist>
